commit translated contents

--- a/aspnetcore/migration/31-to-50.md
+++ b/aspnetcore/migration/31-to-50.md
@@ -4,7 +4,7 @@ author: scottaddie
 description: Erfahren Sie, wie Sie ein ASP.net Core 3,1-Projekt zu ASP.net Core 5,0 migrieren.
 ms.author: scaddie
 ms.custom: mvc
-ms.date: 11/30/2020
+ms.date: 12/02/2020
 no-loc:
 - appsettings.json
 - ASP.NET Core Identity
@@ -18,12 +18,12 @@ no-loc:
 - Razor
 - SignalR
 uid: migration/31-to-50
-ms.openlocfilehash: 9092aff3b1a2fc81c9c0892687a0aaf329038ee6
-ms.sourcegitcommit: 43a540e703b9096921de27abc6b66bc0783fe905
+ms.openlocfilehash: 9579f8e334b8fa60ecc653010317d9deddb06302
+ms.sourcegitcommit: 0bcc0d6df3145a0727da7c4be2f4bda8f27eeaa3
 ms.translationtype: MT
 ms.contentlocale: de-DE
-ms.lasthandoff: 11/30/2020
-ms.locfileid: "96320121"
+ms.lasthandoff: 12/02/2020
+ms.locfileid: "96513082"
 ---
 # <a name="migrate-from-aspnet-core-31-to-50"></a>Migrieren von ASP.net Core 3,1 zu 5,0
 
@@ -75,38 +75,42 @@ Wenn Sie ein Blazor WebAssembly Projekt aktualisieren, fahren Sie mit dem Abschn
 </Project>
 ```
 
-## <a name="changes-to-no-locblazor-app-routing-logic-in-501"></a>Änderungen an Blazor der APP-Routing Logik in 5.0.1
+<!-- HOLD until 5.0.1 package is released
 
-Die Berechnung der Routen Rangfolge wurde in der Patch-Version ASP.net Core 5.0.1 geändert. Dies kann sich auf Sie auswirken, wenn Sie Catch-All-Routen oder-Routen mit optionalen Parametern definiert haben.
+## Changes to Blazor app routing logic in 5.0.1
 
-### <a name="old-behavior"></a>Altes Verhalten
+The computation of route precedence changed in the ASP.NET Core 5.0.1 patch release. This might affect you if you've defined catch-all routes or routes with optional parameters.
 
-Mit dem früheren Verhalten in ASP.net Core 5.0.0 oder früher werden Routen mit niedrigerer Rangfolge (z `{*slug}` . b.) vor Routen mit höherer Rangfolge abgeglichen, z `/customer/{id}` . b..
+### Old behavior
 
-### <a name="new-behavior"></a>Neues Verhalten
+With the prior behavior in ASP.NET Core 5.0.0 or earlier, routes with lower precedence, such as `{*slug}`, are matched before routes with higher precedence, such as `/customer/{id}`.
 
-Das neue Verhalten in ASP.net Core 5.0.1 oder höher stimmt genauer mit dem Routing Verhalten überein, das in ASP.net Core-apps definiert ist, wobei das Framework zuerst die Routen Rangfolge für jedes Segment berechnet und festlegt und nur die Länge der Route zum Unterbrechen von Verknüpfungen als sekundäre Kriterien verwendet.
+### New behavior
 
-### <a name="reason-for-change"></a>Grund für die Änderung
+The new behavior in ASP.NET Core 5.0.1 or later more closely matches the routing behavior defined in ASP.NET Core apps, where the framework computes and establishes the route precedence for each segment first and only uses the length of the route to break ties as a secondary criteria.
 
-Das ursprüngliche Verhalten wird in der Implementierung als Fehler betrachtet, da es sich um das Ziel des Routing Systems handelt, das sich auf Blazor die gleiche Weise verhält wie das ASP.net Core Routing System für die Teilmenge der Features, die durch das Routing unterstützt werden Blazor .
+### Reason for change
 
-### <a name="recommended-action"></a>Empfohlene Maßnahme
+The original behavior is considered a bug in the implementation because our goal is for the Blazor routing system to behave in the same way as the ASP.NET Core routing system for the subset of features supported by Blazor routing.
 
-Fügen Sie das- `PreferExactMatches` Attribut der `Router` Komponente in `App.razor` der Datei hinzu, um das richtige Verhalten zu abonnieren:
+### Recommended action
+
+Add the `PreferExactMatches` attribute to the `Router` component in the `App.razor` file to opt into the correct behavior:
 
 ```razor
 <Router AppAssembly="@typeof(Program).Assembly" PreferExactMatches="true">
 ```
 
-Wenn `PreferExactMatches` auf festgelegt ist `true` , bevorzugt die Routen Zuordnung exakte Übereinstimmungen über Platzhalter.
+When `PreferExactMatches` is set to `true`, route matching prefers exact matches over wildcards.
 
 > [!IMPORTANT]
-> Alle apps sollten explizit auf festgelegt werden `PreferExactMatches` `true` .
+> All apps should explicitly set `PreferExactMatches` to `true`.
 >
-> Die Möglichkeit, die-Option auf festzulegen `false` oder die nicht festgelegte Einstellung zu deaktivieren. diese Option ist standardmäßig auf festgelegt `false` . *is only provided for backward compatibility*
+> The ability to set the option to `false` or leave it unset, which defaults the option to `false`, *is only provided for backward compatibility*.
 >
-> Wenn .net 6 veröffentlicht wird, bevorzugt der Router immer exakte Übereinstimmungen, und die `PreferExactMatches` Option ist nicht verfügbar.
+> When .NET 6 is released, the router will always prefer exact matches, and the `PreferExactMatches` option won't be available.
+
+-->
 
 ## <a name="update-no-locblazor-webassembly-and-no-locblazor-server-projects"></a>Aktualisieren Blazor WebAssembly und Blazor Server Projekte
 
@@ -507,7 +511,7 @@ Auf dem *`Client`* Blatt Azure-Portal App-Registrierungs **Authentifizierung** :
   1. Fügen Sie eine **Einzelseiten-Anwendungs** Platt Form Konfiguration mit dem Umleitungs-URI der APP hinzu.
   1. Deaktivieren Sie die **implizite Gewährung** für **Zugriffs Token** und **ID-Token**.
 
-Weitere Informationen finden Sie unter:
+Weitere Informationen finden Sie unter
 
 * <xref:blazor/security/webassembly/hosted-with-azure-active-directory>
 * <xref:blazor/security/webassembly/hosted-with-azure-active-directory-b2c>
@@ -555,7 +559,7 @@ Bestimmen Sie für die vorangehenden Paket Verweise die Paketversionen für die 
 > <Project Sdk="Microsoft.NET.Sdk.Web">
 > ```
 
-Weitere Informationen finden Sie unter:
+Weitere Informationen finden Sie unter
 
 * <xref:blazor/security/webassembly/hosted-with-azure-active-directory>
 * <xref:blazor/security/webassembly/hosted-with-azure-active-directory-b2c>
