commit translated contents

--- a/aspnetcore/migration/31-to-50.md
+++ b/aspnetcore/migration/31-to-50.md
@@ -18,12 +18,12 @@ no-loc:
 - Razor
 - SignalR
 uid: migration/31-to-50
-ms.openlocfilehash: 9579f8e334b8fa60ecc653010317d9deddb06302
-ms.sourcegitcommit: 0bcc0d6df3145a0727da7c4be2f4bda8f27eeaa3
+ms.openlocfilehash: 355eb545d59246425c6bc2dda5d22c89c7c2afa8
+ms.sourcegitcommit: 92439194682dc788b8b5b3a08bd2184dc00e200b
 ms.translationtype: MT
 ms.contentlocale: de-DE
-ms.lasthandoff: 12/02/2020
-ms.locfileid: "96513082"
+ms.lasthandoff: 12/03/2020
+ms.locfileid: "96556631"
 ---
 # <a name="migrate-from-aspnet-core-31-to-50"></a>Migrieren von ASP.net Core 3,1 zu 5,0
 
@@ -708,6 +708,39 @@ Apps, die auf dem vorhanden sein von in der-Auflistung basieren, `ComplexTypeMod
 - var complexModelBinderProvider = options.ModelBinderProviders.OfType<ComplexTypeModelBinderProvider>();
 + var complexModelBinderProvider = options.ModelBinderProviders.OfType<ComplexObjectModelBinderProvider>();
 ```
+
+## <a name="usedatabaseerrorpage-obsolete"></a>Usedatabaseerrorpage veraltet
+
+Die ASP.net Core 3,1-Vorlagen, die eine Option für einzelne Benutzerkonten enthalten, generieren einen-Rückruf <xref:Microsoft.AspNetCore.Builder.DatabaseErrorPageExtensions.UseDatabaseErrorPage%2A> . `UseDatabaseErrorPage` ist mittlerweile veraltet und sollte durch eine Kombination von und ersetzt werden `AddDatabaseDeveloperPageExceptionFilter` `UseMigrationsEndPoint` , wie im folgenden Code gezeigt:
+
+```diff
+public void ConfigureServices(IServiceCollection services)
+{
+    services.AddDbContext<ApplicationDbContext>(options =>
+        options.UseSqlServer(
+            Configuration.GetConnectionString("DefaultConnection")));
++   services.AddDatabaseDeveloperPageExceptionFilter();
+    services.AddDefaultIdentity<IdentityUser>(options => options.SignIn.RequireConfirmedAccount = true)
+        .AddEntityFrameworkStores<ApplicationDbContext>();
+    services.AddRazorPages();
+}
+
+public void Configure(IApplicationBuilder app, IWebHostEnvironment env)
+{
+    if (env.IsDevelopment())
+    {
+        app.UseDeveloperExceptionPage();
++       app.UseMigrationsEndPoint()
+-       app.UseDatabaseErrorPage();
+    }
+    else
+    {
+        app.UseExceptionHandler("/Error");
+        app.UseHsts();
+    }
+```
+
+Weitere Informationen finden Sie in [diesem GitHub-Issue](https://github.com/dotnet/aspnetcore/issues/24987).
 
 ## <a name="review-breaking-changes"></a>Wichtige Änderungen überprüfen
 
