--- a/aspnetcore/includes/5.0-SDK.md
+++ b/aspnetcore/includes/5.0-SDK.md
@@ -1,1 +1,1 @@
-[.Net 5,0 SDK oder höher](https://dotnet.microsoft.com/download/dotnet/5.0)
+[.NET 5.0 SDK oder höher](https://dotnet.microsoft.com/download/dotnet/5.0)
