--- a/aspnetcore/includes/5.0-SDK.md
+++ b/aspnetcore/includes/5.0-SDK.md
@@ -1,1 +1,1 @@
-[<span data-ttu-id="36dd1-101">.Net 5,0 SDK oder höher</span><span class="sxs-lookup"><span data-stu-id="36dd1-101">.NET 5.0 SDK or later</span></span>](https://dotnet.microsoft.com/download/dotnet/5.0)
+[<span data-ttu-id="50b2f-101">.NET 5.0 SDK oder höher</span><span class="sxs-lookup"><span data-stu-id="50b2f-101">.NET 5.0 SDK or later</span></span>](https://dotnet.microsoft.com/download/dotnet/5.0)
