--- a/aspnetcore/migration/31-to-50.md
+++ b/aspnetcore/migration/31-to-50.md
@@ -18,12 +18,12 @@ no-loc:
 - Razor
 - SignalR
 uid: migration/31-to-50
-ms.openlocfilehash: 355eb545d59246425c6bc2dda5d22c89c7c2afa8
-ms.sourcegitcommit: 92439194682dc788b8b5b3a08bd2184dc00e200b
+ms.openlocfilehash: a4da8767bc483b2f5bd156dfecea64560a9c5e7e
+ms.sourcegitcommit: 6299f08aed5b7f0496001d093aae617559d73240
 ms.translationtype: MT
 ms.contentlocale: de-DE
-ms.lasthandoff: 12/03/2020
-ms.locfileid: "96556631"
+ms.lasthandoff: 12/14/2020
+ms.locfileid: "97486186"
 ---
 # <a name="migrate-from-aspnet-core-31-to-50"></a>Migrieren von ASP.net Core 3,1 zu 5,0
 
@@ -49,7 +49,7 @@ In diesem Artikel wird erläutert, wie ein vorhandenes ASP.net Core 3,1-Projekt 
 
 ## <a name="update-net-core-sdk-version-in-globaljson"></a>Aktualisieren der .NET Core SDK-Version in „global.json“
 
-Wenn Sie sich für eine bestimmte .net Core SDK Version auf eine [global.jsin](/dotnet/core/tools/global-json) der Datei verlassen, aktualisieren Sie die `version` -Eigenschaft auf die installierte Version von .net 5,0 SDK. Zum Beispiel:
+Wenn Sie sich für eine bestimmte .net Core SDK Version auf eine [global.jsin](/dotnet/core/tools/global-json) der Datei verlassen, aktualisieren Sie die `version` -Eigenschaft auf die installierte Version von .net 5,0 SDK. Beispiel:
 
 ```diff
 {
@@ -75,42 +75,38 @@ Wenn Sie ein Blazor WebAssembly Projekt aktualisieren, fahren Sie mit dem Abschn
 </Project>
 ```
 
-<!-- HOLD until 5.0.1 package is released
+## <a name="changes-to-no-locblazor-app-routing-logic-in-501"></a>Änderungen an Blazor der APP-Routing Logik in 5.0.1
 
-## Changes to Blazor app routing logic in 5.0.1
+Die Berechnung der Routen Rangfolge wurde in der Patch-Version ASP.net Core 5.0.1 geändert. Dies kann sich auf Sie auswirken, wenn Sie Catch-All-Routen oder-Routen mit optionalen Parametern definiert haben.
 
-The computation of route precedence changed in the ASP.NET Core 5.0.1 patch release. This might affect you if you've defined catch-all routes or routes with optional parameters.
+### <a name="old-behavior"></a>Altes Verhalten
 
-### Old behavior
+Mit dem früheren Verhalten in ASP.net Core 5.0.0 oder früher werden Routen mit niedrigerer Rangfolge (z `{*slug}` . b.) vor Routen mit höherer Rangfolge abgeglichen, z `/customer/{id}` . b..
 
-With the prior behavior in ASP.NET Core 5.0.0 or earlier, routes with lower precedence, such as `{*slug}`, are matched before routes with higher precedence, such as `/customer/{id}`.
+### <a name="new-behavior"></a>Neues Verhalten
 
-### New behavior
+Das neue Verhalten in ASP.net Core 5.0.1 oder höher stimmt genauer mit dem Routing Verhalten überein, das in ASP.net Core-apps definiert ist, wobei das Framework zuerst die Routen Rangfolge für jedes Segment berechnet und festlegt und nur die Länge der Route zum Unterbrechen von Verknüpfungen als sekundäre Kriterien verwendet.
 
-The new behavior in ASP.NET Core 5.0.1 or later more closely matches the routing behavior defined in ASP.NET Core apps, where the framework computes and establishes the route precedence for each segment first and only uses the length of the route to break ties as a secondary criteria.
+### <a name="reason-for-change"></a>Grund für die Änderung
 
-### Reason for change
+Das ursprüngliche Verhalten wird in der Implementierung als Fehler betrachtet, da es sich um das Ziel des Routing Systems handelt, das sich auf Blazor die gleiche Weise verhält wie das ASP.net Core Routing System für die Teilmenge der Features, die durch das Routing unterstützt werden Blazor .
 
-The original behavior is considered a bug in the implementation because our goal is for the Blazor routing system to behave in the same way as the ASP.NET Core routing system for the subset of features supported by Blazor routing.
+### <a name="recommended-action"></a>Empfohlene Maßnahme
 
-### Recommended action
-
-Add the `PreferExactMatches` attribute to the `Router` component in the `App.razor` file to opt into the correct behavior:
+Fügen Sie das- `PreferExactMatches` Attribut der `Router` Komponente in `App.razor` der Datei hinzu, um das richtige Verhalten zu abonnieren:
 
 ```razor
 <Router AppAssembly="@typeof(Program).Assembly" PreferExactMatches="true">
 ```
 
-When `PreferExactMatches` is set to `true`, route matching prefers exact matches over wildcards.
+Wenn `PreferExactMatches` auf festgelegt ist `true` , bevorzugt die Routen Zuordnung exakte Übereinstimmungen über Platzhalter.
 
 > [!IMPORTANT]
-> All apps should explicitly set `PreferExactMatches` to `true`.
+> Alle apps sollten explizit auf festgelegt werden `PreferExactMatches` `true` .
 >
-> The ability to set the option to `false` or leave it unset, which defaults the option to `false`, *is only provided for backward compatibility*.
+> Die Möglichkeit, die-Option auf festzulegen `false` oder die nicht festgelegte Einstellung zu deaktivieren. diese Option ist standardmäßig auf festgelegt `false` . 
 >
-> When .NET 6 is released, the router will always prefer exact matches, and the `PreferExactMatches` option won't be available.
-
--->
+> Wenn .net 6 veröffentlicht wird, bevorzugt der Router immer exakte Übereinstimmungen, und die `PreferExactMatches` Option ist nicht verfügbar.
 
 ## <a name="update-no-locblazor-webassembly-and-no-locblazor-server-projects"></a>Aktualisieren Blazor WebAssembly und Blazor Server Projekte
 
@@ -511,7 +507,7 @@ Auf dem *`Client`* Blatt Azure-Portal App-Registrierungs **Authentifizierung** :
   1. Fügen Sie eine **Einzelseiten-Anwendungs** Platt Form Konfiguration mit dem Umleitungs-URI der APP hinzu.
   1. Deaktivieren Sie die **implizite Gewährung** für **Zugriffs Token** und **ID-Token**.
 
-Weitere Informationen finden Sie unter
+Weitere Informationen finden Sie unter:
 
 * <xref:blazor/security/webassembly/hosted-with-azure-active-directory>
 * <xref:blazor/security/webassembly/hosted-with-azure-active-directory-b2c>
@@ -559,7 +555,7 @@ Bestimmen Sie für die vorangehenden Paket Verweise die Paketversionen für die 
 > <Project Sdk="Microsoft.NET.Sdk.Web">
 > ```
 
-Weitere Informationen finden Sie unter
+Weitere Informationen finden Sie unter:
 
 * <xref:blazor/security/webassembly/hosted-with-azure-active-directory>
 * <xref:blazor/security/webassembly/hosted-with-azure-active-directory-b2c>
@@ -654,7 +650,7 @@ Aktualisieren Sie die folgenden Eigenschaften in der Projektdatei, um eine RCL z
 
 ## <a name="update-package-references"></a>Aktualisieren von Paketverweisen
 
-Aktualisieren Sie in der Projektdatei alle [Microsoft. aspnetcore. *](https://www.nuget.org/packages?q=Microsoft.AspNetCore.*), [Microsoft. entityframeworkcore. *](https://www.nuget.org/packages?q=Microsoft.EntityFrameworkCore.*), [Microsoft. Extensions. *](https://www.nuget.org/packages?q=Microsoft.Extensions.*), und [System.Net.Http.Jsauf](https://www.nuget.org/packages/System.Net.Http.Json) das Attribut des Paket Verweises auf `Version` 5.0.0 oder höher. Zum Beispiel:
+Aktualisieren Sie in der Projektdatei alle [Microsoft. aspnetcore. *](https://www.nuget.org/packages?q=Microsoft.AspNetCore.*), [Microsoft. entityframeworkcore. *](https://www.nuget.org/packages?q=Microsoft.EntityFrameworkCore.*), [Microsoft. Extensions. *](https://www.nuget.org/packages?q=Microsoft.Extensions.*), und [System.Net.Http.Jsauf](https://www.nuget.org/packages/System.Net.Http.Json) das Attribut des Paket Verweises auf `Version` 5.0.0 oder höher. Beispiel:
 
 ```diff
 <ItemGroup>
