--- a/aspnetcore/includes/3.1-SDK.md
+++ b/aspnetcore/includes/3.1-SDK.md
@@ -1,1 +1,1 @@
-[<span data-ttu-id="f8d14-101">.NET Core 3.1 SDK oder höher</span><span class="sxs-lookup"><span data-stu-id="f8d14-101">.NET Core 3.1 SDK or later</span></span>](https://dotnet.microsoft.com/download/dotnet-core/3.1)
+[<span data-ttu-id="a1ffb-101">.NET Core 3.1 SDK oder höher</span><span class="sxs-lookup"><span data-stu-id="a1ffb-101">.NET Core 3.1 SDK or later</span></span>](https://dotnet.microsoft.com/download/dotnet-core/3.1)
