commit translated contents

--- a/aspnetcore/migration/20_21.md
+++ b/aspnetcore/migration/20_21.md
@@ -18,12 +18,12 @@ no-loc:
 - Razor
 - SignalR
 uid: migration/20_21
-ms.openlocfilehash: 409d0e0af1956e588af822fc6fc88d85d27ce2aa
-ms.sourcegitcommit: ca34c1ac578e7d3daa0febf1810ba5fc74f60bbf
+ms.openlocfilehash: c6fac709cf168775c9b758ad6a490d6dd3d9142a
+ms.sourcegitcommit: 04a404a9655c59ad1ea02aff5d399ae1b833ad6a
 ms.translationtype: MT
 ms.contentlocale: de-DE
-ms.lasthandoff: 10/30/2020
-ms.locfileid: "93057192"
+ms.lasthandoff: 01/03/2021
+ms.locfileid: "97854547"
 ---
 # <a name="migrate-from-aspnet-core-20-to-21"></a>Migrate from ASP.NET Core 2.0 to 2.1 (Migrieren von ASP.NET Core 2.0 zu 2.1)
 
@@ -71,7 +71,7 @@ Das folgende Markup zeigt die von der Vorlage generierte 2,1-Projektdatei:
 
 ## <a name="rules-for-projects-targeting-the-shared-framework"></a>Regeln für Projekte, die auf das freigegebene Framework abzielen
 
-Ein *freigegebenes Framework* besteht aus einer Reihe von Assemblys ( *DLL* -Dateien), die sich nicht in den Ordnern der App befinden. Das freigegebene Framework muss zum Ausführen der App auf dem Computer installiert sein. Weitere Informationen finden Sie unter [The shared framework](https://natemcmaster.com/blog/2018/08/29/netcore-primitives-2/) (Das freigegebene Framework).
+Ein *freigegebenes Framework* besteht aus einer Reihe von Assemblys (*DLL*-Dateien), die sich nicht in den Ordnern der App befinden. Das freigegebene Framework muss zum Ausführen der App auf dem Computer installiert sein. Weitere Informationen finden Sie unter [The shared framework](https://natemcmaster.com/blog/2018/08/29/netcore-primitives-2/) (Das freigegebene Framework).
 
 ASP.net Core 2,1 umfasst die folgenden gemeinsam genutzten Frameworks:
 
@@ -117,11 +117,11 @@ Die folgende Abbildung zeigt den 2,1-Code. Der Code in Grün hat die Version 2,0
 
 ![neue Versions Unterschiede](20_21/_static/main21.png)
 
-Der folgende Code zeigt die Version 2,1 von *Program.cs* :
+Der folgende Code zeigt die Version 2,1 von *Program.cs*:
 
 [!code-csharp[](20_21/sample/Program.cs?name=snippet)]
 
-Der neue ersetzt den-Befehl durch "" mit "" `Main` `BuildWebHost` . [CreateWebHostBuilder](/dotnet/api/microsoft.aspnetcore.mvc.testing.webapplicationfactory-1.createwebhostbuilder) [Iwebhostbuilder](/dotnet/api/microsoft.aspnetcore.hosting.iwebhostbuilder) wurde zur Unterstützung einer neuen [Infrastruktur für Integrationstests](xref:test/integration-tests)hinzugefügt.
+Der neue ersetzt den-Befehl durch "" mit "" `Main` `BuildWebHost` . [](/dotnet/api/microsoft.aspnetcore.mvc.testing.webapplicationfactory-1.createwebhostbuilder) [Iwebhostbuilder](/dotnet/api/microsoft.aspnetcore.hosting.iwebhostbuilder) wurde zur Unterstützung einer neuen [Infrastruktur für Integrationstests](xref:test/integration-tests)hinzugefügt.
 
 ### <a name="changes-to-startup"></a>Änderungen am Start
 
@@ -188,7 +188,7 @@ In diesem Abschnitt werden die Schritte zum Ersetzen des generierten Codes der A
 * Löschen Sie die vom Identity Gerüst erstellte, von `IdentityDbContext` abgeleitete Klasse im Ordner " *Areas/ Identity /Data/* ".
 * *Bereiche/ Identity / Identity HostingStartup.cs* löschen.
 * Aktualisieren Sie die Datei " *\_ loginpartial. cshtml* ":
-  * Verschieben Sie *pages/ \_ loginpartial. cshtml* in *pages/Shared/ \_ loginpartial. cshtml* .
+  * Verschieben Sie *pages/ \_ loginpartial. cshtml* in *pages/Shared/ \_ loginpartial. cshtml*.
   * Fügen Sie `asp-area="Identity"` dem Formular und den Anker Links hinzu.
   * Aktualisieren Sie das- `<form />` Element auf `<form asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Page("/Index", new { area = "" })" method="post" id="logoutForm" class="navbar-right">` .
 
@@ -213,8 +213,8 @@ Aktualisieren Sie `ConfigureServices` mit folgendem Code:
 
 ### <a name="_validationscriptspartialcshtml"></a>\_Validationscriptspartial. cshtml
 
-* *Seiten/ \_ Validationscriptspartial. cshtml* wechselt zu *pages/Shared/ \_ validationscriptspartial. cshtml* .
-* " *jQuery. Validate/1.14.0* " ändert sich in " *jQuery. Validate/1.17.0* ".
+* *Seiten/ \_ Validationscriptspartial. cshtml* wechselt zu *pages/Shared/ \_ validationscriptspartial. cshtml*.
+* " *jQuery. Validate/1.14.0* " ändert sich in " *jQuery. Validate/1.17.0*".
 
 ### <a name="new-files"></a>Neue Dateien
 
@@ -261,7 +261,7 @@ Der folgende JSON-Code zeigt die neue, von 2,1 Vorlagen generierte *launchSettin
 
 Weitere Informationen finden Sie unter <xref:security/enforcing-ssl>.
 
-## <a name="breaking-changes"></a>Aktuelle Änderungen
+## <a name="breaking-changes"></a>Breaking Changes
 
 ### <a name="fileresult-range-header"></a>Fileresult-Bereichs Kopfzeile
 
@@ -280,4 +280,4 @@ Die folgenden <xref:Microsoft.AspNetCore.Mvc.ControllerBase> Methoden verarbeite
 
 * Wenn die APP unter Windows mit IIS gehostet wird, installieren Sie das aktuellste [.net Core-Hostingpaket](xref:host-and-deploy/iis/index#install-the-net-core-hosting-bundle).
 * [SetCompatibilityVersion](xref:mvc/compatibility-version)
-* [Transportkonfiguration](xref:fundamentals/servers/kestrel#transport-configuration)
+* [Libuv-Transport Konfiguration](xref:fundamentals/servers/kestrel#libuv-transport-configuration)
