--- a/aspnetcore/migration/31-to-50.md
+++ b/aspnetcore/migration/31-to-50.md
@@ -18,12 +18,12 @@ no-loc:
 - Razor
 - SignalR
 uid: migration/31-to-50
-ms.openlocfilehash: a4da8767bc483b2f5bd156dfecea64560a9c5e7e
-ms.sourcegitcommit: 6299f08aed5b7f0496001d093aae617559d73240
+ms.openlocfilehash: 397a93f9edb2ab238576d50d8eb71464441b4733
+ms.sourcegitcommit: 04a404a9655c59ad1ea02aff5d399ae1b833ad6a
 ms.translationtype: MT
 ms.contentlocale: de-DE
-ms.lasthandoff: 12/14/2020
-ms.locfileid: "97486186"
+ms.lasthandoff: 01/03/2021
+ms.locfileid: "97854573"
 ---
 # <a name="migrate-from-aspnet-core-31-to-50"></a>Migrieren von ASP.net Core 3,1 zu 5,0
 
@@ -96,13 +96,13 @@ Das ursprüngliche Verhalten wird in der Implementierung als Fehler betrachtet, 
 Fügen Sie das- `PreferExactMatches` Attribut der `Router` Komponente in `App.razor` der Datei hinzu, um das richtige Verhalten zu abonnieren:
 
 ```razor
-<Router AppAssembly="@typeof(Program).Assembly" PreferExactMatches="true">
+<Router AppAssembly="@typeof(Program).Assembly" PreferExactMatches="@true">
 ```
 
-Wenn `PreferExactMatches` auf festgelegt ist `true` , bevorzugt die Routen Zuordnung exakte Übereinstimmungen über Platzhalter.
+Wenn `PreferExactMatches` auf festgelegt ist `@true` , bevorzugt die Routen Zuordnung exakte Übereinstimmungen über Platzhalter.
 
 > [!IMPORTANT]
-> Alle apps sollten explizit auf festgelegt werden `PreferExactMatches` `true` .
+> Alle apps sollten explizit auf festgelegt werden `PreferExactMatches` `@true` .
 >
 > Die Möglichkeit, die-Option auf festzulegen `false` oder die nicht festgelegte Einstellung zu deaktivieren. diese Option ist standardmäßig auf festgelegt `false` . 
 >
@@ -507,7 +507,7 @@ Auf dem *`Client`* Blatt Azure-Portal App-Registrierungs **Authentifizierung** :
   1. Fügen Sie eine **Einzelseiten-Anwendungs** Platt Form Konfiguration mit dem Umleitungs-URI der APP hinzu.
   1. Deaktivieren Sie die **implizite Gewährung** für **Zugriffs Token** und **ID-Token**.
 
-Weitere Informationen finden Sie unter:
+Weitere Informationen finden Sie unter
 
 * <xref:blazor/security/webassembly/hosted-with-azure-active-directory>
 * <xref:blazor/security/webassembly/hosted-with-azure-active-directory-b2c>
@@ -555,7 +555,7 @@ Bestimmen Sie für die vorangehenden Paket Verweise die Paketversionen für die 
 > <Project Sdk="Microsoft.NET.Sdk.Web">
 > ```
 
-Weitere Informationen finden Sie unter:
+Weitere Informationen finden Sie unter
 
 * <xref:blazor/security/webassembly/hosted-with-azure-active-directory>
 * <xref:blazor/security/webassembly/hosted-with-azure-active-directory-b2c>
@@ -726,7 +726,7 @@ public void Configure(IApplicationBuilder app, IWebHostEnvironment env)
     if (env.IsDevelopment())
     {
         app.UseDeveloperExceptionPage();
-+       app.UseMigrationsEndPoint()
++       app.UseMigrationsEndPoint();
 -       app.UseDatabaseErrorPage();
     }
     else
