commit translated contents

--- a/aspnetcore/migration/31-to-50.md
+++ b/aspnetcore/migration/31-to-50.md
@@ -18,12 +18,12 @@ no-loc:
 - Razor
 - SignalR
 uid: migration/31-to-50
-ms.openlocfilehash: 397a93f9edb2ab238576d50d8eb71464441b4733
-ms.sourcegitcommit: 04a404a9655c59ad1ea02aff5d399ae1b833ad6a
+ms.openlocfilehash: 1a4dcdee738eb05f62c3268d9ef579974dd99cf4
+ms.sourcegitcommit: b64c44ba5e3abb4ad4d50de93b7e282bf0f251e4
 ms.translationtype: MT
 ms.contentlocale: de-DE
-ms.lasthandoff: 01/03/2021
-ms.locfileid: "97854573"
+ms.lasthandoff: 01/07/2021
+ms.locfileid: "97972092"
 ---
 # <a name="migrate-from-aspnet-core-31-to-50"></a>Migrieren von ASP.net Core 3,1 zu 5,0
 
@@ -104,7 +104,7 @@ Wenn `PreferExactMatches` auf festgelegt ist `@true` , bevorzugt die Routen Zuor
 > [!IMPORTANT]
 > Alle apps sollten explizit auf festgelegt werden `PreferExactMatches` `@true` .
 >
-> Die Möglichkeit, die-Option auf festzulegen `false` oder die nicht festgelegte Einstellung zu deaktivieren. diese Option ist standardmäßig auf festgelegt `false` . 
+> Die Möglichkeit, auf festzulegen `PreferExactMatches` `@false` oder nicht festzulegen, wobei die Option standardmäßig `false` in c# verwendet *wird, wird nur aus Gründen der Abwärtskompatibilität bereitgestellt*.
 >
 > Wenn .net 6 veröffentlicht wird, bevorzugt der Router immer exakte Übereinstimmungen, und die `PreferExactMatches` Option ist nicht verfügbar.
 
