--- a/aspnetcore/whats-new/2020-12.md
+++ b/aspnetcore/whats-new/2020-12.md
@@ -2,18 +2,22 @@
 title: 'ASP.net Core docs: Neuerungen am 1. Dezember 2020 bis 31. Dezember 2020'
 description: Neuerungen in den ASP.net Core docs für den 1. Dezember 2020 bis 31. Dezember 2020.
 ms.date: 01/04/2021
-ms.openlocfilehash: 8866103037b41d0c1114cfe295660db2a81cd333
-ms.sourcegitcommit: 3593c4efa707edeaaceffbfa544f99f41fc62535
+ms.openlocfilehash: bb9894620ee8eddc1ca52250bd1a1e6b971f2fe2
+ms.sourcegitcommit: b64c44ba5e3abb4ad4d50de93b7e282bf0f251e4
 ms.translationtype: MT
 ms.contentlocale: de-DE
-ms.lasthandoff: 01/04/2021
-ms.locfileid: "97865760"
+ms.lasthandoff: 01/07/2021
+ms.locfileid: "97972040"
 ---
 # <a name="aspnet-core-docs-whats-new-for-december-1-2020---december-31-2020"></a>ASP.net Core docs: Neuerungen am 1. Dezember 2020 bis 31. Dezember 2020
 
 Willkommen bei den Neuerungen in den ASP.net Core docs ab dem 1. Dezember 2020 bis zum 31. Dezember 2020. Nachfolgend sind alle größeren Änderungen aufgelistet, die in diesem Zeitraum an der Dokumentation vorgenommen wurden.
 
 ## <a name="blazor"></a>Blazor
+
+### <a name="new-articles"></a>Neue Artikel
+
+- [Blazor: Routen Rang folgen Logik in blazor-apps geändert](/dotnet/core/compatibility/aspnet-core/5.0/blazor-routing-logic-changed) -Dokument-blazor-Routen Übereinstimmungs Logik
 
 ### <a name="updated-articles"></a>Aktualisierte Artikel
 
