--- a/aspnetcore/whats-new/2020-12.md
+++ b/aspnetcore/whats-new/2020-12.md
@@ -2,50 +2,54 @@
 title: 'ASP.net Core docs: Neuerungen am 1. Dezember 2020 bis 31. Dezember 2020'
 description: Neuerungen in den ASP.net Core docs für den 1. Dezember 2020 bis 31. Dezember 2020.
 ms.date: 01/04/2021
-ms.openlocfilehash: 8866103037b41d0c1114cfe295660db2a81cd333
-ms.sourcegitcommit: 3593c4efa707edeaaceffbfa544f99f41fc62535
+ms.openlocfilehash: bb9894620ee8eddc1ca52250bd1a1e6b971f2fe2
+ms.sourcegitcommit: b64c44ba5e3abb4ad4d50de93b7e282bf0f251e4
 ms.translationtype: MT
 ms.contentlocale: de-DE
-ms.lasthandoff: 01/04/2021
-ms.locfileid: "97865760"
+ms.lasthandoff: 01/07/2021
+ms.locfileid: "97972040"
 ---
-# <a name="aspnet-core-docs-whats-new-for-december-1-2020---december-31-2020"></a><span data-ttu-id="6c126-103">ASP.net Core docs: Neuerungen am 1. Dezember 2020 bis 31. Dezember 2020</span><span class="sxs-lookup"><span data-stu-id="6c126-103">ASP.NET Core docs: What's new for December 1, 2020 - December 31, 2020</span></span>
+# <a name="aspnet-core-docs-whats-new-for-december-1-2020---december-31-2020"></a><span data-ttu-id="b6583-103">ASP.net Core docs: Neuerungen am 1. Dezember 2020 bis 31. Dezember 2020</span><span class="sxs-lookup"><span data-stu-id="b6583-103">ASP.NET Core docs: What's new for December 1, 2020 - December 31, 2020</span></span>
 
-<span data-ttu-id="6c126-104">Willkommen bei den Neuerungen in den ASP.net Core docs ab dem 1. Dezember 2020 bis zum 31. Dezember 2020.</span><span class="sxs-lookup"><span data-stu-id="6c126-104">Welcome to what's new in the ASP.NET Core docs from December 1, 2020 through December 31, 2020.</span></span> <span data-ttu-id="6c126-105">Nachfolgend sind alle größeren Änderungen aufgelistet, die in diesem Zeitraum an der Dokumentation vorgenommen wurden.</span><span class="sxs-lookup"><span data-stu-id="6c126-105">This article lists some of the major changes to docs during this period.</span></span>
+<span data-ttu-id="b6583-104">Willkommen bei den Neuerungen in den ASP.net Core docs ab dem 1. Dezember 2020 bis zum 31. Dezember 2020.</span><span class="sxs-lookup"><span data-stu-id="b6583-104">Welcome to what's new in the ASP.NET Core docs from December 1, 2020 through December 31, 2020.</span></span> <span data-ttu-id="b6583-105">Nachfolgend sind alle größeren Änderungen aufgelistet, die in diesem Zeitraum an der Dokumentation vorgenommen wurden.</span><span class="sxs-lookup"><span data-stu-id="b6583-105">This article lists some of the major changes to docs during this period.</span></span>
 
-## <a name="blazor"></a><span data-ttu-id="6c126-106">Blazor</span><span class="sxs-lookup"><span data-stu-id="6c126-106">Blazor</span></span>
+## <a name="blazor"></a><span data-ttu-id="b6583-106">Blazor</span><span class="sxs-lookup"><span data-stu-id="b6583-106">Blazor</span></span>
 
-### <a name="updated-articles"></a><span data-ttu-id="6c126-107">Aktualisierte Artikel</span><span class="sxs-lookup"><span data-stu-id="6c126-107">Updated articles</span></span>
+### <a name="new-articles"></a><span data-ttu-id="b6583-107">Neue Artikel</span><span class="sxs-lookup"><span data-stu-id="b6583-107">New articles</span></span>
 
-- <span data-ttu-id="6c126-108"><xref:blazor/fundamentals/dependency-injection> -Verbessern der Lesbarkeit und einführen von Server-/Wass-zonenpivots in das Dokument zur Abhängigkeitsinjektion</span><span class="sxs-lookup"><span data-stu-id="6c126-108"><xref:blazor/fundamentals/dependency-injection> - Improve readability and introduce Server/WASM zone pivots to Blazor dependency injection doc</span></span>
-- <span data-ttu-id="6c126-109"><xref:blazor/fundamentals/configuration> -Verbessern der Lesbarkeit des blazor-Konfigurations Dokuments</span><span class="sxs-lookup"><span data-stu-id="6c126-109"><xref:blazor/fundamentals/configuration> - Improve readability of the Blazor configuration doc</span></span>
-- <span data-ttu-id="6c126-110"><xref:blazor/fundamentals/routing> -Verbessern der Lesbarkeit und anwenden ASP.net Core 5,0-Updates auf das blazor-Routing Dokument</span><span class="sxs-lookup"><span data-stu-id="6c126-110"><xref:blazor/fundamentals/routing> - Improve readability and apply ASP.NET Core 5.0 updates to Blazor routing doc</span></span>
+- <span data-ttu-id="b6583-108">[Blazor: Routen Rang folgen Logik in blazor-apps geändert](/dotnet/core/compatibility/aspnet-core/5.0/blazor-routing-logic-changed) -Dokument-blazor-Routen Übereinstimmungs Logik</span><span class="sxs-lookup"><span data-stu-id="b6583-108">[Blazor: Route precedence logic changed in Blazor apps](/dotnet/core/compatibility/aspnet-core/5.0/blazor-routing-logic-changed) - Document Blazor route matching precedence logic</span></span>
 
-## <a name="tutorials"></a><span data-ttu-id="6c126-111">Tutorials</span><span class="sxs-lookup"><span data-stu-id="6c126-111">Tutorials</span></span>
+### <a name="updated-articles"></a><span data-ttu-id="b6583-109">Aktualisierte Artikel</span><span class="sxs-lookup"><span data-stu-id="b6583-109">Updated articles</span></span>
 
-### <a name="updated-articles"></a><span data-ttu-id="6c126-112">Aktualisierte Artikel</span><span class="sxs-lookup"><span data-stu-id="6c126-112">Updated articles</span></span>
+- <span data-ttu-id="b6583-110"><xref:blazor/fundamentals/dependency-injection> -Verbessern der Lesbarkeit und einführen von Server-/Wass-zonenpivots in das Dokument zur Abhängigkeitsinjektion</span><span class="sxs-lookup"><span data-stu-id="b6583-110"><xref:blazor/fundamentals/dependency-injection> - Improve readability and introduce Server/WASM zone pivots to Blazor dependency injection doc</span></span>
+- <span data-ttu-id="b6583-111"><xref:blazor/fundamentals/configuration> -Verbessern der Lesbarkeit des blazor-Konfigurations Dokuments</span><span class="sxs-lookup"><span data-stu-id="b6583-111"><xref:blazor/fundamentals/configuration> - Improve readability of the Blazor configuration doc</span></span>
+- <span data-ttu-id="b6583-112"><xref:blazor/fundamentals/routing> -Verbessern der Lesbarkeit und anwenden ASP.net Core 5,0-Updates auf das blazor-Routing Dokument</span><span class="sxs-lookup"><span data-stu-id="b6583-112"><xref:blazor/fundamentals/routing> - Improve readability and apply ASP.NET Core 5.0 updates to Blazor routing doc</span></span>
 
-- <span data-ttu-id="6c126-113"><xref:tutorials/signalr-blazor-webassembly> -Dokument Verwendung des System. Text. Encodings. Web-Pakets in ASP.net Core 3,1</span><span class="sxs-lookup"><span data-stu-id="6c126-113"><xref:tutorials/signalr-blazor-webassembly> - Document usage of System.Text.Encodings.Web package in ASP.NET Core 3.1</span></span>
+## <a name="tutorials"></a><span data-ttu-id="b6583-113">Tutorials</span><span class="sxs-lookup"><span data-stu-id="b6583-113">Tutorials</span></span>
 
-## <a name="community-contributors"></a><span data-ttu-id="6c126-114">Mitwirkende in der Community</span><span class="sxs-lookup"><span data-stu-id="6c126-114">Community contributors</span></span>
+### <a name="updated-articles"></a><span data-ttu-id="b6583-114">Aktualisierte Artikel</span><span class="sxs-lookup"><span data-stu-id="b6583-114">Updated articles</span></span>
 
-<span data-ttu-id="6c126-115">Die folgenden Personen haben während dieses Zeitraums zu den ASP.net Core docs beigetragen.</span><span class="sxs-lookup"><span data-stu-id="6c126-115">The following people contributed to the ASP.NET Core docs during this period.</span></span> <span data-ttu-id="6c126-116">Vielen Dank!</span><span class="sxs-lookup"><span data-stu-id="6c126-116">Thank you!</span></span> <span data-ttu-id="6c126-117">Erfahren Sie, wie Sie mitwirken können, indem Sie den Links unter „Beteiligen“ auf der [Landing Page „Neuerungen“](index.yml) folgen.</span><span class="sxs-lookup"><span data-stu-id="6c126-117">Learn how to contribute by following the links under "Get involved" in the [what's new landing page](index.yml).</span></span>
+- <span data-ttu-id="b6583-115"><xref:tutorials/signalr-blazor-webassembly> -Dokument Verwendung des System. Text. Encodings. Web-Pakets in ASP.net Core 3,1</span><span class="sxs-lookup"><span data-stu-id="b6583-115"><xref:tutorials/signalr-blazor-webassembly> - Document usage of System.Text.Encodings.Web package in ASP.NET Core 3.1</span></span>
 
-- <span data-ttu-id="6c126-118">[poornimanayar](https://github.com/poornimanayar) -Poornima Najar (3)</span><span class="sxs-lookup"><span data-stu-id="6c126-118">[poornimanayar](https://github.com/poornimanayar) - Poornima Nayar (3)</span></span>
-- <span data-ttu-id="6c126-119">[serpent5](https://github.com/serpent5) -Kirk Larkin (3)</span><span class="sxs-lookup"><span data-stu-id="6c126-119">[serpent5](https://github.com/serpent5) - Kirk Larkin (3)</span></span>
-- <span data-ttu-id="6c126-120">[der-wazz](https://github.com/the-wazz) (3)</span><span class="sxs-lookup"><span data-stu-id="6c126-120">[the-wazz](https://github.com/the-wazz) (3)</span></span>
-- <span data-ttu-id="6c126-121">[1kevgriff](https://github.com/1kevgriff) -Kevin Griffin (1)</span><span class="sxs-lookup"><span data-stu-id="6c126-121">[1kevgriff](https://github.com/1kevgriff) - Kevin Griffin (1)</span></span>
-- <span data-ttu-id="6c126-122">[adnansharif](https://github.com/adnanSharif) -Adnan Sharif (1)</span><span class="sxs-lookup"><span data-stu-id="6c126-122">[adnanSharif](https://github.com/adnanSharif) - Adnan Sharif (1)</span></span>
-- <span data-ttu-id="6c126-123">[Capchik](https://github.com/CAPCHIK) -Maksim (1)</span><span class="sxs-lookup"><span data-stu-id="6c126-123">[CAPCHIK](https://github.com/CAPCHIK) - Maksim (1)</span></span>
-- <span data-ttu-id="6c126-124">[cesarsouza](https://github.com/cesarsouza) -César Souza (1)</span><span class="sxs-lookup"><span data-stu-id="6c126-124">[cesarsouza](https://github.com/cesarsouza) - César Souza (1)</span></span>
-- <span data-ttu-id="6c126-125">[Araridahamat](https://github.com/FaridAhamat) -f-ahamat (1)</span><span class="sxs-lookup"><span data-stu-id="6c126-125">[FaridAhamat](https://github.com/FaridAhamat) - Farid Ahamat (1)</span></span>
-- <span data-ttu-id="6c126-126">[grprakash](https://github.com/grprakash) -Prakash G.R.</span><span class="sxs-lookup"><span data-stu-id="6c126-126">[grprakash](https://github.com/grprakash) - Prakash G.R.</span></span> <span data-ttu-id="6c126-127">(1)</span><span class="sxs-lookup"><span data-stu-id="6c126-127">(1)</span></span>
-- <span data-ttu-id="6c126-128">[leomicheloni](https://github.com/leomicheloni) -Leonardo MICHELONI (1)</span><span class="sxs-lookup"><span data-stu-id="6c126-128">[leomicheloni](https://github.com/leomicheloni) - Leonardo Micheloni (1)</span></span>
-- <span data-ttu-id="6c126-129">[mahyar1386](https://github.com/mahyar1386) (1)</span><span class="sxs-lookup"><span data-stu-id="6c126-129">[mahyar1386](https://github.com/mahyar1386) (1)</span></span>
-- <span data-ttu-id="6c126-130">[MaroonBob1928](https://github.com/MaroonBob1928) (1)</span><span class="sxs-lookup"><span data-stu-id="6c126-130">[MaroonBob1928](https://github.com/MaroonBob1928) (1)</span></span>
-- <span data-ttu-id="6c126-131">[mrlife](https://github.com/mrlife) (1)</span><span class="sxs-lookup"><span data-stu-id="6c126-131">[mrlife](https://github.com/mrlife) (1)</span></span>
-- <span data-ttu-id="6c126-132">[ptrm04](https://github.com/ptrm04) -Peter (1)</span><span class="sxs-lookup"><span data-stu-id="6c126-132">[ptrm04](https://github.com/ptrm04) - Peter (1)</span></span>
-- <span data-ttu-id="6c126-133">[robbkenobi](https://github.com/robbkenobi) (1)</span><span class="sxs-lookup"><span data-stu-id="6c126-133">[robbkenobi](https://github.com/robbkenobi) (1)</span></span>
-- <span data-ttu-id="6c126-134">[shehabafawzy](https://github.com/shehabafawzy) -Shehab fawzy (1)</span><span class="sxs-lookup"><span data-stu-id="6c126-134">[shehabafawzy](https://github.com/shehabafawzy) - Shehab Fawzy (1)</span></span>
-- <span data-ttu-id="6c126-135">[Tornhuof](https://github.com/Tornhoof) -Stefan (1)</span><span class="sxs-lookup"><span data-stu-id="6c126-135">[Tornhoof](https://github.com/Tornhoof) - Stefan (1)</span></span>
-- <span data-ttu-id="6c126-136">[yanxiaodi](https://github.com/yanxiaodi) -Xiaodi Yan (1)</span><span class="sxs-lookup"><span data-stu-id="6c126-136">[yanxiaodi](https://github.com/yanxiaodi) - Xiaodi Yan (1)</span></span>
+## <a name="community-contributors"></a><span data-ttu-id="b6583-116">Mitwirkende in der Community</span><span class="sxs-lookup"><span data-stu-id="b6583-116">Community contributors</span></span>
+
+<span data-ttu-id="b6583-117">Die folgenden Personen haben während dieses Zeitraums zu den ASP.net Core docs beigetragen.</span><span class="sxs-lookup"><span data-stu-id="b6583-117">The following people contributed to the ASP.NET Core docs during this period.</span></span> <span data-ttu-id="b6583-118">Vielen Dank!</span><span class="sxs-lookup"><span data-stu-id="b6583-118">Thank you!</span></span> <span data-ttu-id="b6583-119">Erfahren Sie, wie Sie mitwirken können, indem Sie den Links unter „Beteiligen“ auf der [Landing Page „Neuerungen“](index.yml) folgen.</span><span class="sxs-lookup"><span data-stu-id="b6583-119">Learn how to contribute by following the links under "Get involved" in the [what's new landing page](index.yml).</span></span>
+
+- <span data-ttu-id="b6583-120">[poornimanayar](https://github.com/poornimanayar) -Poornima Najar (3)</span><span class="sxs-lookup"><span data-stu-id="b6583-120">[poornimanayar](https://github.com/poornimanayar) - Poornima Nayar (3)</span></span>
+- <span data-ttu-id="b6583-121">[serpent5](https://github.com/serpent5) -Kirk Larkin (3)</span><span class="sxs-lookup"><span data-stu-id="b6583-121">[serpent5](https://github.com/serpent5) - Kirk Larkin (3)</span></span>
+- <span data-ttu-id="b6583-122">[der-wazz](https://github.com/the-wazz) (3)</span><span class="sxs-lookup"><span data-stu-id="b6583-122">[the-wazz](https://github.com/the-wazz) (3)</span></span>
+- <span data-ttu-id="b6583-123">[1kevgriff](https://github.com/1kevgriff) -Kevin Griffin (1)</span><span class="sxs-lookup"><span data-stu-id="b6583-123">[1kevgriff](https://github.com/1kevgriff) - Kevin Griffin (1)</span></span>
+- <span data-ttu-id="b6583-124">[adnansharif](https://github.com/adnanSharif) -Adnan Sharif (1)</span><span class="sxs-lookup"><span data-stu-id="b6583-124">[adnanSharif](https://github.com/adnanSharif) - Adnan Sharif (1)</span></span>
+- <span data-ttu-id="b6583-125">[Capchik](https://github.com/CAPCHIK) -Maksim (1)</span><span class="sxs-lookup"><span data-stu-id="b6583-125">[CAPCHIK](https://github.com/CAPCHIK) - Maksim (1)</span></span>
+- <span data-ttu-id="b6583-126">[cesarsouza](https://github.com/cesarsouza) -César Souza (1)</span><span class="sxs-lookup"><span data-stu-id="b6583-126">[cesarsouza](https://github.com/cesarsouza) - César Souza (1)</span></span>
+- <span data-ttu-id="b6583-127">[Araridahamat](https://github.com/FaridAhamat) -f-ahamat (1)</span><span class="sxs-lookup"><span data-stu-id="b6583-127">[FaridAhamat](https://github.com/FaridAhamat) - Farid Ahamat (1)</span></span>
+- <span data-ttu-id="b6583-128">[grprakash](https://github.com/grprakash) -Prakash G.R.</span><span class="sxs-lookup"><span data-stu-id="b6583-128">[grprakash](https://github.com/grprakash) - Prakash G.R.</span></span> <span data-ttu-id="b6583-129">(1)</span><span class="sxs-lookup"><span data-stu-id="b6583-129">(1)</span></span>
+- <span data-ttu-id="b6583-130">[leomicheloni](https://github.com/leomicheloni) -Leonardo MICHELONI (1)</span><span class="sxs-lookup"><span data-stu-id="b6583-130">[leomicheloni](https://github.com/leomicheloni) - Leonardo Micheloni (1)</span></span>
+- <span data-ttu-id="b6583-131">[mahyar1386](https://github.com/mahyar1386) (1)</span><span class="sxs-lookup"><span data-stu-id="b6583-131">[mahyar1386](https://github.com/mahyar1386) (1)</span></span>
+- <span data-ttu-id="b6583-132">[MaroonBob1928](https://github.com/MaroonBob1928) (1)</span><span class="sxs-lookup"><span data-stu-id="b6583-132">[MaroonBob1928](https://github.com/MaroonBob1928) (1)</span></span>
+- <span data-ttu-id="b6583-133">[mrlife](https://github.com/mrlife) (1)</span><span class="sxs-lookup"><span data-stu-id="b6583-133">[mrlife](https://github.com/mrlife) (1)</span></span>
+- <span data-ttu-id="b6583-134">[ptrm04](https://github.com/ptrm04) -Peter (1)</span><span class="sxs-lookup"><span data-stu-id="b6583-134">[ptrm04](https://github.com/ptrm04) - Peter (1)</span></span>
+- <span data-ttu-id="b6583-135">[robbkenobi](https://github.com/robbkenobi) (1)</span><span class="sxs-lookup"><span data-stu-id="b6583-135">[robbkenobi](https://github.com/robbkenobi) (1)</span></span>
+- <span data-ttu-id="b6583-136">[shehabafawzy](https://github.com/shehabafawzy) -Shehab fawzy (1)</span><span class="sxs-lookup"><span data-stu-id="b6583-136">[shehabafawzy](https://github.com/shehabafawzy) - Shehab Fawzy (1)</span></span>
+- <span data-ttu-id="b6583-137">[Tornhuof](https://github.com/Tornhoof) -Stefan (1)</span><span class="sxs-lookup"><span data-stu-id="b6583-137">[Tornhoof](https://github.com/Tornhoof) - Stefan (1)</span></span>
+- <span data-ttu-id="b6583-138">[yanxiaodi](https://github.com/yanxiaodi) -Xiaodi Yan (1)</span><span class="sxs-lookup"><span data-stu-id="b6583-138">[yanxiaodi](https://github.com/yanxiaodi) - Xiaodi Yan (1)</span></span>
