--- a/aspnetcore/migration/31-to-50.md
+++ b/aspnetcore/migration/31-to-50.md
@@ -18,12 +18,12 @@ no-loc:
 - Razor
 - SignalR
 uid: migration/31-to-50
-ms.openlocfilehash: 1a4dcdee738eb05f62c3268d9ef579974dd99cf4
-ms.sourcegitcommit: b64c44ba5e3abb4ad4d50de93b7e282bf0f251e4
+ms.openlocfilehash: 60e36f031208c9a19655813c97830fe5a055c394
+ms.sourcegitcommit: 8b0e9a72c1599ce21830c843558a661ba908ce32
 ms.translationtype: MT
 ms.contentlocale: de-DE
-ms.lasthandoff: 01/07/2021
-ms.locfileid: "97972092"
+ms.lasthandoff: 01/08/2021
+ms.locfileid: "98024768"
 ---
 # <a name="migrate-from-aspnet-core-31-to-50"></a>Migrieren von ASP.net Core 3,1 zu 5,0
 
@@ -96,15 +96,15 @@ Das ursprüngliche Verhalten wird in der Implementierung als Fehler betrachtet, 
 Fügen Sie das- `PreferExactMatches` Attribut der `Router` Komponente in `App.razor` der Datei hinzu, um das richtige Verhalten zu abonnieren:
 
 ```razor
-<Router AppAssembly="@typeof(Program).Assembly" PreferExactMatches="@true">
+<Router AppAssembly="@typeof(Program).Assembly" PreferExactMatches="true">
 ```
 
-Wenn `PreferExactMatches` auf festgelegt ist `@true` , bevorzugt die Routen Zuordnung exakte Übereinstimmungen über Platzhalter.
+Wenn `PreferExactMatches` auf festgelegt ist `true` , bevorzugt die Routen Zuordnung exakte Übereinstimmungen über Platzhalter.
 
 > [!IMPORTANT]
-> Alle apps sollten explizit auf festgelegt werden `PreferExactMatches` `@true` .
+> Alle apps sollten explizit auf festgelegt werden `PreferExactMatches` `true` .
 >
-> Die Möglichkeit, auf festzulegen `PreferExactMatches` `@false` oder nicht festzulegen, wobei die Option standardmäßig `false` in c# verwendet *wird, wird nur aus Gründen der Abwärtskompatibilität bereitgestellt*.
+> Die Möglichkeit, die Einstellung auf festzulegen `PreferExactMatches` `false` oder zu verlassen, *wird nur aus Gründen der Abwärtskompatibilität bereitgestellt*.
 >
 > Wenn .net 6 veröffentlicht wird, bevorzugt der Router immer exakte Übereinstimmungen, und die `PreferExactMatches` Option ist nicht verfügbar.
 
@@ -117,15 +117,15 @@ Wenn `PreferExactMatches` auf festgelegt ist `@true` , bevorzugt die Routen Zuor
     ```diff
     +<link href="{ASSEMBLY NAME}.styles.css" rel="stylesheet" />
     ```
-    
+
     Eigenständiges Blazor WebAssembly oder Blazor Server Beispiel:
-    
+
     ```diff
     +<link href="BlazorSample.styles.css" rel="stylesheet" />
     ```
 
     *`Client`* Projekt eines gehosteten Blazor WebAssembly Lösungs Beispiels:
-    
+
     ```diff
     +<link href="BlazorSample.Client.styles.css" rel="stylesheet" />
     ```
