commit translated contents

--- a/aspnetcore/migration/31-to-50.md
+++ b/aspnetcore/migration/31-to-50.md
@@ -18,12 +18,12 @@ no-loc:
 - Razor
 - SignalR
 uid: migration/31-to-50
-ms.openlocfilehash: 60e36f031208c9a19655813c97830fe5a055c394
-ms.sourcegitcommit: 8b0e9a72c1599ce21830c843558a661ba908ce32
+ms.openlocfilehash: dc073aa6fb1267af76a99e955711bbc96737370b
+ms.sourcegitcommit: 610936e4d3507f7f3d467ed7859ab9354ec158ba
 ms.translationtype: MT
 ms.contentlocale: de-DE
-ms.lasthandoff: 01/08/2021
-ms.locfileid: "98024768"
+ms.lasthandoff: 01/25/2021
+ms.locfileid: "98751589"
 ---
 # <a name="migrate-from-aspnet-core-31-to-50"></a>Migrieren von ASP.net Core 3,1 zu 5,0
 
@@ -75,7 +75,7 @@ Wenn Sie ein Blazor WebAssembly Projekt aktualisieren, fahren Sie mit dem Abschn
 </Project>
 ```
 
-## <a name="changes-to-no-locblazor-app-routing-logic-in-501"></a>Änderungen an Blazor der APP-Routing Logik in 5.0.1
+## <a name="changes-to-no-locblazor-app-routing-logic-in-501-and-further-5x-releases-up-to-60"></a>Änderungen an Blazor der APP-Routing Logik in 5.0.1 und weiteren 5. x-Versionen bis zu 6,0
 
 Die Berechnung der Routen Rangfolge wurde in der Patch-Version ASP.net Core 5.0.1 geändert. Dies kann sich auf Sie auswirken, wenn Sie Catch-All-Routen oder-Routen mit optionalen Parametern definiert haben.
 
@@ -96,15 +96,15 @@ Das ursprüngliche Verhalten wird in der Implementierung als Fehler betrachtet, 
 Fügen Sie das- `PreferExactMatches` Attribut der `Router` Komponente in `App.razor` der Datei hinzu, um das richtige Verhalten zu abonnieren:
 
 ```razor
-<Router AppAssembly="@typeof(Program).Assembly" PreferExactMatches="true">
+<Router AppAssembly="@typeof(Program).Assembly" PreferExactMatches="@true">
 ```
 
-Wenn `PreferExactMatches` auf festgelegt ist `true` , bevorzugt die Routen Zuordnung exakte Übereinstimmungen über Platzhalter.
+Wenn `PreferExactMatches` auf `@true` festgelegt ist, bevorzugt die Routenzuordnung exakte Übereinstimmungen gegenüber Platzhaltern.
 
 > [!IMPORTANT]
-> Alle apps sollten explizit auf festgelegt werden `PreferExactMatches` `true` .
+> Alle apps sollten explizit auf festgelegt werden `PreferExactMatches` `@true` .
 >
-> Die Möglichkeit, die Einstellung auf festzulegen `PreferExactMatches` `false` oder zu verlassen, *wird nur aus Gründen der Abwärtskompatibilität bereitgestellt*.
+> Die Möglichkeit, die Einstellung auf festzulegen `PreferExactMatches` `@false` oder zu verlassen, *wird nur aus Gründen der Abwärtskompatibilität bereitgestellt*.
 >
 > Wenn .net 6 veröffentlicht wird, bevorzugt der Router immer exakte Übereinstimmungen, und die `PreferExactMatches` Option ist nicht verfügbar.
 
